tests/09-variant-out-of-range.stderr
error[E0277]: the trait bound `modular_bitfield::private::checks::False: modular_bitfield::private::checks::DiscriminantInRange` is not satisfied
   --> $DIR/09-variant-out-of-range.rs:17:5
    |
17  |     External,
    |     ^^^^^^^^ the trait `modular_bitfield::private::checks::DiscriminantInRange` is not implemented for `modular_bitfield::private::checks::False`
    |
   ::: $WORKSPACE/src/private/checks.rs
    |
    |     <Self::CheckType as DispatchTrueFalse>::Out: DiscriminantInRange,
    |                                                  ------------------- required by this bound in `modular_bitfield::private::checks::CheckDiscriminantInRange`
